Celsius to fahrenheit, and image media query

--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
   }
 
   #dash > div {
-    border: 2px solid gray;
+    border: 2px solid black;
   }
 
   /* #topNav {
@@ -94,7 +94,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: rgba(80, 80, 80, 0.5);
+    background: rgba(0, 0, 0, 0.55);
     grid-area: air-content;
     border-radius: 2px;
     color: #f5f7fa
@@ -134,7 +134,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: rgba(80, 80, 80, 0.5);
+    background: rgba(0, 0, 0, 0.55);
     grid-area: water-content;
     border-radius: 2px;
     color: #f5f7fa
@@ -146,7 +146,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: rgba(80, 80, 80, 0.5);
+    background: rgba(0, 0, 0, 0.55);
     /* fallback for old browsers */
     /* background: -webkit-linear-gradient(to bottom, #ED8F03, #FFB75E); */
     /* Chrome 10-25, Safari 5.1-6 */
@@ -167,7 +167,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgba(80, 80, 80, 0.5);
+    background-color: rgba(0, 0, 0, 0.55);
     grid-area: pump-content;
     border-radius: 2px;
     color: #f5f7fa
@@ -180,7 +180,7 @@
   }
 
   #alert-content {
-    background-color: rgba(80, 80, 80, 0.5);
+    background-color: rgba(0, 0, 0, 0.55);
     grid-area: alert-content;
     border-radius: 2px;
     color: #f5f7fa
@@ -196,7 +196,7 @@
   }
 
   #control-content {
-    background-color: rgba(80, 80, 80, 0.5);
+    background-color: rgba(0, 0, 0, 0.55);
     grid-area: control-content;
     border-radius: 2px;
     color: #f5f7fa
@@ -229,4 +229,11 @@
     font-size: 2.3em;
   }
 
+}
+
+@media screen and (min-width: 1024px) {
+  img {
+    width: 150px;
+    height: 150px;
+  }
 }
