--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,17 @@
     background-image: linear-gradient(550deg, #ffffff 0%, #82bc23 74%);
     letter-spacing: 2px;
     border-bottom: #282c34 1px solid;
+    font-size: 20px;
+    font-weight: 300;
+  }
+
+  #header h2 {}
+
+  #header img {
+    display: flex;
+    justify-content: flex-start;
+    height: 100px;
+    width: 205px;
   }
 
   #dash {
@@ -54,13 +65,20 @@
     padding: 5%;
     display: grid;
     grid-template-columns: calc(50% - 15px) 50%;
-    grid-template-rows: 27vh 27vh 27vh;
+    grid-template-rows: 27vh 27vh 27vh 27vh;
     grid-template-areas: "air-content   water-content" "light-content  pump-content" "alert-content control-content";
     grid-gap: 10px;
   }
 
   #dash>div {
     border: 2px solid gray;
+  }
+
+  #date {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    color: #f5f7fa
   }
 
   /* #topNav {
@@ -90,7 +108,12 @@
     background: rgba(0, 0, 0, 0.55);
     grid-area: air-content;
     border-radius: 2px;
-    color: #f5f7fa
+    color: #f5f7fa;
+    transition: background-color 0.5s ease;
+  }
+
+  #air-content:hover {
+    background-color: rgba(66, 130, 33, 0.482);
   }
 
   #air-container {
@@ -99,8 +122,6 @@
     /* overflow: hidden; */
     /* padding-right: 5%; */
   }
-
-  #air-img-box>img {}
 
   .info-text {
     font-weight: bold;
@@ -129,10 +150,13 @@
     background: rgba(0, 0, 0, 0.55);
     grid-area: water-content;
     border-radius: 2px;
-    color: #f5f7fa
+    color: #f5f7fa;
+    transition: background-color 0.5s ease;
   }
 
-  #water-img-box {}
+  #water-content:hover {
+    background-color: rgba(66, 130, 33, 0.482);
+  }
 
   #light-content {
     display: flex;
@@ -146,10 +170,13 @@
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     grid-area: light-content;
     border-radius: 2px;
-    color: #f5f7fa
+    color: #f5f7fa;
+    transition: background-color 0.5s ease;
   }
 
-  #light-img-box {}
+  #light-content:hover {
+    background-color: rgba(66, 130, 33, 0.482);
+  }
 
   #light-text {
     font-size: 2.5em;
@@ -162,10 +189,13 @@
     background-color: rgba(0, 0, 0, 0.55);
     grid-area: pump-content;
     border-radius: 2px;
-    color: #f5f7fa
+    color: #f5f7fa;
+    transition: background-color 0.5s ease
   }
 
-  #pump-img-box {}
+  #pump-content:hover {
+    background-color: rgba(66, 130, 33, 0.482);
+  }
 
   #pump-text {
     font-size: 2.2em;
@@ -175,7 +205,12 @@
     background-color: rgba(0, 0, 0, 0.55);
     grid-area: alert-content;
     border-radius: 2px;
-    color: #f5f7fa
+    color: #f5f7fa;
+    transition: background-color 0.5s ease
+  }
+
+  #alert-content:hover {
+    background-color: rgba(66, 130, 33, 0.482);
   }
 
   #alert-box {
@@ -191,7 +226,12 @@
     background-color: rgba(0, 0, 0, 0.55);
     grid-area: control-content;
     border-radius: 2px;
-    color: #f5f7fa
+    color: #f5f7fa;
+    transition: background-color 0.5s ease;
+  }
+
+  #control-content:hover {
+    background-color: rgba(66, 130, 33, 0.482);
   }
 
   .label {
@@ -201,31 +241,29 @@
     align-self: start;
   }
 
-@media screen and (max-width: 748px) {
-  #dash {
-    margin: auto;
-    padding: 5%;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(6, 25vh);
-    grid-template-areas: 
-              "air-content"
-              "water-content" 
-              "light-content"
-              "pump-content"
-              "alert-content"
-              "control-content";
-    grid-gap: 10px;
-  }
-  .info-text {
-    font-size: 2.3em;
+  @media screen and (max-width: 748px) {
+    #dash {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.3), #000), url(./imgs/basil-blur-close-up-1391505.jpg);
+      background-size: cover;
+      background-position: center;
+      height: 170vh;
+      width: 100vw;
+      margin: auto;
+      padding: 5%;
+      display: grid;
+      grid-template-columns: 100%;
+      grid-template-rows: repeat(6, 25vh);
+      grid-template-areas: "air-content" "water-content" "light-content" "pump-content" "alert-content" "control-content";
+      grid-gap: 10px;
+    }
+    .info-text {
+      font-size: 2.3em;
+    }
   }
 
-}
-
-@media screen and (min-width: 1024px) {
-  img {
-    width: 150px;
-    height: 150px;
+  @media screen and (min-width: 1024px) {
+    img {
+      width: 150px;
+      height: 150px;
+    }
   }
-}
