--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,27 @@
     font-family: "Quicksand"
   }
 
+  .detail-page {
+    text-align: center;
+    font-family: "Quicksand";
+    background-color: white;
+  }
+
   #root {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), #000), url(./imgs/basil-blur-close-up-1391505.jpg);
     background-size: cover;
     background-position: center;
-    height: 120vh;
+    height: 100%;
+  }
+
+  .chart-container {
+    position: relative;
+    width: 45vw;
+  }
+
+  #chart-wrapper {
+    display: flex;
+    justify-content: space-evenly
   }
 
   /* ------------------------------------------- */
@@ -51,7 +67,7 @@
 
   #dash {
     /* margin: 5%; */
-    padding: 5%;
+    padding:3%;
     display: grid;
     grid-template-columns: calc(50% - 15px) 50%;
     grid-template-rows: 27vh 27vh 27vh;
@@ -102,25 +118,7 @@
 
   #air-img-box>img {}
 
-  .info-text {
-    font-weight: bold;
-    font-size: 2.9em;
-  }
-
-  .label1 {
-    font-size: 50%;
-    font-weight: 300;
-  }
-
-  .hum {
-    font-size: 2em;
-    padding-top: 10px;
-  }
-
-  .label2 {
-    font-size: 75%;
-    font-weight: 300;
-  }
+  
 
   #water-content {
     display: flex;
@@ -194,12 +192,19 @@
     color: #f5f7fa
   }
 
-  .label {
-    margin-left: 5%;
-    margin-top: 5%;
-    font-size: 1.2rem;
-    align-self: start;
+  .data {
+    font-weight: bold;
+    font-size: 2.9em;
   }
+
+  .label {
+    margin-top: 5%;
+    font-size: 1.4rem;
+  }
+
+  /* .secondary {
+    font-size: 0.5em;
+  } */
 
 @media screen and (max-width: 748px) {
   #dash {
@@ -219,6 +224,19 @@
   }
   .info-text {
     font-size: 2.3em;
+  }
+
+  #chart-wrapper {
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: space-evenly; */
+    /* height: 90vh; */
+  }
+  .chart-container {
+    width: 90vw;
+    margin-top: 10%;
+    border: 1px solid green;
+    padding: 5%;
   }
 
 }
