--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   /* ------------------------------------------- */
 
   @import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,600&display=swap');
+
   * {
     margin: 0;
     padding: 0;
@@ -65,24 +66,26 @@
     border-bottom: #282c34 1px solid;
     font-size: 20px;
     font-weight: 300;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
   #header h2 {}
 
-  #header img {
-    display: flex;
-    justify-content: flex-start;
+  #logo {
     height: 100px;
     width: 205px;
+    margin-left: 5vw;
   }
 
   #dash {
     /* margin: 5%; */
-    padding:3%;
+    padding: 3%;
     display: grid;
     grid-template-columns: calc(50% - 15px) 50%;
     grid-template-rows: 27vh 27vh 27vh 27vh;
-    grid-template-areas: "air-content   water-content" "light-content  pump-content" "alert-content control-content";
+    grid-template-areas: "air-content   water-content""light-content  pump-content""alert-content control-content";
     grid-gap: 10px;
   }
 
@@ -91,10 +94,21 @@
   }
 
   #date {
-    display: flex;
-    justify-content: center;
     font-size: 20px;
-    color: #f5f7fa
+    color: black;
+    margin-right: 5vw;
+  }
+
+  #nav {
+    display: flex;
+    justify-content: space-around;
+    font-size: 1.5em;
+  }
+
+  button {
+    /* position: absolute; */
+    /* top: 12%; */
+    /* right: 5%; */
   }
 
   /* #topNav {
@@ -110,6 +124,68 @@
       margin-right: 60px;
       margin-top: 30px;
     } */
+
+  /** Slider **/
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
 
   /* ------------------------------------------- */
 
@@ -246,44 +322,59 @@
     font-size: 0.5em;
   } */
 
-@media screen and (max-width: 748px) {
-  #dash {
-    margin: auto;
-    padding: 5%;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(6, 25vh);
-    grid-template-areas: 
-              "air-content"
-              "water-content" 
-              "light-content"
-              "pump-content"
-              "alert-content"
-              "control-content";
-    grid-gap: 10px;
-  }
-  .info-text {
-    font-size: 2.3em;
+  @media screen and (max-width: 748px) {
+    #dash {
+      margin: auto;
+      padding: 5%;
+      display: grid;
+      grid-template-columns: 100%;
+      grid-template-rows: repeat(6, 25vh);
+      grid-template-areas:
+        "air-content"
+        "water-content"
+        "light-content"
+        "pump-content"
+        "alert-content"
+        "control-content";
+      grid-gap: 10px;
+    }
+
+    .data {
+      font-size: 2.5em;
+    }
+
+    #chart-wrapper {
+      flex-direction: column;
+      align-items: center;
+      /* justify-content: space-evenly; */
+      /* height: 90vh; */
+    }
+
+    .chart-container {
+      width: 90vw;
+      margin-top: 10%;
+      border: 1px solid green;
+      padding: 5%;
+    }
+
+    #date {
+      font-size: 15px;
+    }
+
+    #logo {
+      width: 100px;
+      height: 50px;
+    }
+
+    #header h2 {
+      font-size: 20px;
+    }
+
   }
 
-  #chart-wrapper {
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: space-evenly; */
-    /* height: 90vh; */
+  @media screen and (min-width: 1024px) {
+    img {
+      width: 150px;
+      height: 150px;
+    }
   }
-  .chart-container {
-    width: 90vw;
-    margin-top: 10%;
-    border: 1px solid green;
-    padding: 5%;
-  }
-
-}
-
-@media screen and (min-width: 1024px) {
-  img {
-    width: 150px;
-    height: 150px;
-  }
-}
