--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,14 @@
     background-color: white;
     border-radius: 3px;
     padding: 3%;
-    width: fit-content;
+    width: -webkit-fit-content;
     margin: 5% auto 0 auto;
+  }
+
+  @-moz-document url-prefix() {
+    #chart-wrapper {
+      width: -moz-fit-content;
+    }
   }
 
   /* ------------------------------------------- */
@@ -122,6 +128,11 @@
     padding: 5px;
     background-color: rgba(192, 192, 192, 0.35);
   }
+
+  /* img {
+    width: 75% !important;
+    height: 75% !important;
+  } */
 
   button {
     /* position: absolute; */
@@ -364,7 +375,7 @@
     font-size: 0.5em;
   } */
 
-  @media screen and (max-width: 748px) {
+  @media screen and (max-width: 770px) {
     #root {
       /* height: fit-content; */
     }
@@ -394,6 +405,7 @@
 
     .chart-container {
       width: 80vw;
+      height: auto;
       margin-top: 5%;
       /* border: 6px solid slategray; */
       padding: 3%;
@@ -437,6 +449,13 @@
       -webkit-transform: translateX(18px);
       -ms-transform: translateX(18px);
       transform: translateX(18px);
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    .chart-container{
+      width: 80vw;
+      height: auto;
     }
   }
 
