--- a/src/App.css
+++ b/src/App.css
@@ -131,11 +131,6 @@
     background-color: rgba(192, 192, 192, 0.35);
   }
 
-  /* img {
-    width: 75% !important;
-    height: 75% !important;
-  } */
-
 
   /** Slider **/
   /* CSS from w3 schools */
@@ -346,6 +341,10 @@
     background-color: rgba(66, 130, 33, 0.482);
   }
 
+  /* #dash>div>div {
+    font-size: 2rem;
+  } */
+
   .data {
     font-weight: bold;
     font-size: 2.9em;
@@ -356,7 +355,9 @@
     font-size: 1.4rem;
   }
 
-  
+  #dash img {
+    height: 80%;
+  }
 
   /* .secondary {
     font-size: 0.5em;
